--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -1,6 +1,12 @@
 /* Form elements */
+.container {
+  display: flex;
+  justify-content: center;
+}
+
 .form-group {
   margin-bottom: 20px;
+  margin: 2vw;
 }
 
 .form-label {
@@ -10,26 +16,19 @@
 }
 
 .form-control {
-  border: none;
+  border: 1px solid;
   border-radius: 0;
-  box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25);
-  border-bottom: 1px solid #ccc;
   font-size: 16px;
-  padding: 10px 0;
-}
-
-.form-control:focus {
-  border-color: #007bff;
-  box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25);
+  padding: 10px;
 }
 
 /* Button */
 .btn {
-  border-radius: 0;
+  border-radius: 5px;
 }
 
 .btn-primary {
-  background-color: #007bff;
+  background-color: #3787db;
   border-color: #007bff;
 }
 
@@ -40,9 +39,10 @@
 
 /* Card */
 .card {
-  border: none;
-  border-radius: 0;
+  border: 2px solid;
+  border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-top: 50%;
 }
 
 .card-body {
@@ -56,8 +56,8 @@
 }
 
 .card-text {
-  font-size: 16px;
-  margin-bottom: 0;
+  font-size: 12px;
+  margin: 5%;
 }
 
 .card-text-Recover {
